# rmBifrost

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  build-entrypoint.sh  buildall.sh
.github/workflows/: cmake-aarch64.yaml
cmake/: CMakeRC.cmake
examples/: CMakeLists.txt
examples/example_app/: CMakeLists.txt  main.cpp
include/bifrost/: bifrost.h  bifrost_client.h  global_constants.h
src/: CMakeLists.txt  bifrost.cpp  bifrost_impl.cpp  bifrost_impl.h  constants.h  entrypoint.cpp  hook_typedefs.h  resources.h
src/client/: CMakeLists.txt  bifrost_client.cpp  bifrost_client_impl.cpp  bifrost_client_impl.h
src/compositor/: compositor.cpp  compositor.h  compositor_client.cpp  compositor_client.h
src/compositor/packets/: begin_session_request.h  begin_session_response.h  packet.h  release_frame.h  release_frame_packet.h  submit_frame.h  submit_frame_packet.h
src/gui/: boot_screen.cpp  boot_screen.h  lv_conf.h  lvgl_app.cpp  lvgl_app.h  lvgl_renderer.cpp  lvgl_renderer.h  system_ui.cpp  system_ui.h
src/gui/components/: message_box.cpp  message_box.h
src/resources/: CMakeLists.txt
src/resources/animation/: welcome.json
src/resources/animations/: hello.json
src/resources/fonts/: ebgaramond_48.c  ionicons.c
src/utils/: data_structs.h  shm_channel.cpp  shm_channel.h  unix_socket.cpp  unix_socket.h
